# sirius-interpreter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: expr.h  incl.h  interpreter.h
src/: expr.cpp  interpreter.cpp
